--- a/index.html
+++ b/index.html
@@ -2,10 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="author" content="JHLEE" />
-    <meta name="description" content="Welcome to My Kakao-clone" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <script
+      src="https://kit.fontawesome.com/2424c9ae4f.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Chats | KaKao Clone</title>
   </head>
-  <body></body>
+  <body>
+    <div class="status-bar">
+      <div class="status-bar__column">
+        <span class="status-bar__clock">13:27</span>
+      </div>
+      <div class="status-bar__column">
+        <i class="fas fa-clock"></i>
+        <i class="fas fa-volume-mute"></i>
+        <i class="fas fa-wifi"></i>
+        <span class="status-bar__battery-level">100%</span>
+        <i class="fas fa-battery-full"></i>
+      </div>
+    </div>
+  </body>
 </html>
