--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
         <li class="chats__chat chat">
           <div class="chat__column">
             <img
-              class="chat__avatar"
+              class="chat__avatar g-avatar"
               src="images/avatar.jpg"
               alt=""
-              width="200px"
-              height="200px"
+              width="100px"
+              height="100px"
             />
             <div class="chat__content">
               <span class="chat__username">Lynn</span>
