--- a/friends.html
+++ b/friends.html
@@ -36,6 +36,77 @@
         </span>
       </div>
     </header>
+    <main class="friends">
+      <header class="friends__header">
+        <div class="friends__friend friend friend--lg">
+          <div class="friend__column">
+            <img
+              src="images/avatar.jpg"
+              alt=""
+              class="g-avatar friend__avatar"
+              width="100px"
+              height="100px"
+            />
+            <div class="friend__content">
+              <span class="friend__name">
+                JHLEE
+              </span>
+              <span class="friend__status">
+                hello!
+              </span>
+            </div>
+          </div>
+        </div>
+      </header>
+      <div class="friends__plus">
+        <h5 class="friends__title">Plus friend</h5>
+        <div class="friends__friend friend">
+          <div class="friend__column">
+            <img
+              src="images/avatar.jpg"
+              alt=""
+              class="g-avatar friend__avatar"
+              width="100px"
+              height="100px"
+            />
+            <div class="friend__content">
+              <span class="friend__name">
+                Plus Friend
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <ul class="friends__list">
+        <h5 class="friends__title">Friends 14</h5>
+        <li class="friends__friend friend">
+          <div class="friend__column">
+            <img
+              src="images/avatar.jpg"
+              alt=""
+              class="g-avatar friend__avatar"
+              width="100px"
+              height="100px"
+            />
+            <div class="friend__content">
+              <span class="friend__name">
+                JHLEE
+              </span>
+              <span class="friend__status">
+                hello!
+              </span>
+            </div>
+          </div>
+          <div class="friend__column">
+            <div class="friend__now-listening">
+              <span>지독하게 - FTISLAND</span>
+              <i class="fas fa-play"></i>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </main>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__list-item">
