#1.9 chat screen html

--- a/settings.html
+++ b/settings.html
@@ -25,11 +25,9 @@
     </div>
     <header class="header">
       <div class="header__header-column">
-        <div class="header__back-btn">
-          <a href="more.html">
-            <i class="fas fa-arrow-left fa-2x"></i>
-          </a>
-        </div>
+        <a href="more.html" class="header__back-btn">
+          <i class="fas fa-arrow-left fa-2x"></i>
+        </a>
         <h1 class="header__title">Settings</h1>
       </div>
       <div class="header__header-column">
