--- a/find.html
+++ b/find.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/2424c9ae4f.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Find | KaKao Clone</title>
   </head>
   <body>
