--- a/chat.html
+++ b/chat.html
@@ -46,12 +46,7 @@
           Monday, January 13, 2020
         </span>
         <li class="incoming-message message">
-          <img
-            src="images/avatar.jpg"
-            class="g-avatar"
-            width="100px"
-            height="100px"
-          />
+          <img src="images/avatar.jpg" class="g-avatar" />
           <div class="message__content">
             <span class="message__author">Best Friend</span>
             <div class="message__bubble">
