--- a/index.html
+++ b/index.html
@@ -46,21 +46,27 @@
       <ul class="chats__list">
         <li class="chats__chat chat">
           <a href="chat.html">
-            <div class="chat__column">
-              <img
-                class="chat__avatar g-avatar"
-                src="images/avatar.jpg"
-                alt=""
-                width="100px"
-                height="100px"
-              />
-              <div class="chat__content">
-                <span class="chat__username">Lynn</span>
-                <span class="chat__preview">Going home!</span>
+            <div class="chats__chat friend friend--lg">
+              <div class="friend__column">
+                <img
+                  src="images/avatar.jpg"
+                  alt=""
+                  class="g-avatar friend__avatar"
+                />
+                <div class="friend__content">
+                  <span class="friend__name">
+                    JHLEE
+                  </span>
+                  <span class="friend__bottom-text">
+                    hello!
+                  </span>
+                </div>
               </div>
-            </div>
-            <div class="chat__column">
-              <span class="chat__timestamp">Yesterday</span>
+              <div class="friend__column">
+                <span class="chat__timestamp">
+                  Jan 15
+                </span>
+              </div>
             </div>
           </a>
         </li>
