--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <img
                   src="images/avatar.jpg"
                   alt=""
-                  class="g-avatar friend__avatar"
+                  class="m-avatar friend__avatar"
                 />
                 <div class="friend__content">
                   <span class="friend__name">
