--- a/find.html
+++ b/find.html
@@ -78,11 +78,7 @@
         <h5 class="find__title">Recommended Friends</h5>
         <li class="find__friend friend">
           <div class="friend__column">
-            <img
-              src="images/avatar.jpg"
-              alt=""
-              class="g-avatar friend__avatar"
-            />
+            <img src="images/avatar.jpg" alt="" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 JHLEE
