--- a/more.html
+++ b/more.html
@@ -96,7 +96,7 @@
         <ul class="more__suggestions-list">
           <li class="more_suggestion suggestion">
             <span class="suggestion__icon">
-              <i class="fas fa-quote-right fa-2x"></i>
+              <i class="fas fa-quote-right"></i>
             </span>
             <span class="suggestion__title">
               KaKao Story
