--- a/chat.html
+++ b/chat.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>Chat | KaKao Clone</title>
   </head>
-  <body>
+  <body class="chats-body">
     <div class="status-bar">
       <div class="status-bar__column">
         <span class="status-bar__clock">13:27</span>
