--- a/chat.html
+++ b/chat.html
@@ -48,19 +48,37 @@
         <li class="incoming-message message">
           <img src="images/avatar.jpg" class="g-avatar" />
           <div class="message__content">
-            <span class="message__author">Best Friend</span>
-            <div class="message__bubble">
+            <span class="message__bubble">
               Congrats I love you!
-            </div>
+            </span>
+            <span class="message__author">Best Friend</span>
           </div>
           <span class="message__timestamp"></span>
         </li>
         <li class="sent-message message">
           <span class="message__timestamp"></span>
           <div class="message__content">
-            <div class="message__bubble">
+            <span class="message__bubble">
               thank you:)
-            </div>
+            </span>
+          </div>
+        </li>
+        <li class="incoming-message message">
+          <img src="images/avatar.jpg" class="g-avatar" />
+          <div class="message__content">
+            <span class="message__bubble">
+              Congrats I love you!
+            </span>
+            <span class="message__author">Best Friend</span>
+          </div>
+          <span class="message__timestamp"></span>
+        </li>
+        <li class="sent-message message">
+          <span class="message__timestamp"></span>
+          <div class="message__content">
+            <span class="message__bubble">
+              thank you:)
+            </span>
           </div>
         </li>
       </ul>
