--- a/friends.html
+++ b/friends.html
@@ -118,5 +118,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen small!!</span>
+    </div>
   </body>
 </html>
