--- a/settings.html
+++ b/settings.html
@@ -61,5 +61,8 @@
         </ul>
       </section>
     </main>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen small!! 🙄</span>
+    </div>
   </body>
 </html>
