--- a/chat.html
+++ b/chat.html
@@ -51,7 +51,7 @@
           <img src="images/avatar.jpg" class="g-avatar" />
           <div class="message__content">
             <span class="message__bubble">
-              Congrats I love you!
+              Hello!
             </span>
             <span class="message__author">Best Friend</span>
           </div>
@@ -61,7 +61,7 @@
           <span class="message__timestamp"></span>
           <div class="message__content">
             <span class="message__bubble">
-              thank you:)
+              Hi :)
             </span>
           </div>
         </li>
@@ -79,7 +79,7 @@
           <span class="message__timestamp"></span>
           <div class="message__content">
             <span class="message__bubble">
-              thank you:)
+              thank you💖
             </span>
           </div>
         </li>
