--- a/friends.html
+++ b/friends.html
@@ -58,6 +58,19 @@
         </div>
       </header>
       <div class="friends__plus">
+        <h5 class="friends__title">생일인 친구</h5>
+        <div class="friends__friend friend">
+          <div class="friend__column">
+            <img src="images/avatar.jpg" alt="" class="friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">
+                친구의 생일을 확인해 보세요!
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="friends__plus">
         <h5 class="friends__title">Plus friend</h5>
         <div class="friends__friend friend">
           <div class="friend__column">
