--- a/more.html
+++ b/more.html
@@ -56,7 +56,7 @@
                 JHLEE
               </span>
               <span class="friend__status">
-                jhlee.ict@gmailc.om
+                jhlee.ict@gmail.com
               </span>
             </div>
           </div>
@@ -130,6 +130,7 @@
         </li>
         <li class="nav__list-item">
           <a href="index.html" class="nav__list-link">
+            <div class="nav__badge">8</div>
             <i class="far fa-comment"></i>
           </a>
         </li>
