마지막 수정

--- a/chat.html
+++ b/chat.html
@@ -30,7 +30,7 @@
           <a href="index.html" class="header__back-btn">
             <i class="fas fa-arrow-left"></i>
           </a>
-          <h1 class="header__title">Best Friend</h1>
+          <h1 class="header__title">Ryan</h1>
         </div>
         <div class="header__header-column">
           <span class="header__icon">
@@ -45,15 +45,15 @@
     <main class="chat-screen">
       <ul class="chat__messages">
         <span class="chat__timestamp">
-          Monday, January 13, 2020
+          Thursday, January 23, 2020
         </span>
         <li class="incoming-message message">
-          <img src="images/avatar.jpg" class="g-avatar" />
+          <img src="images/ryan.PNG" class="g-avatar" />
           <div class="message__content">
             <span class="message__bubble">
               Hello!
             </span>
-            <span class="message__author">Best Friend</span>
+            <span class="message__author">Ryan</span>
           </div>
           <span class="message__timestamp"></span>
         </li>
@@ -66,12 +66,12 @@
           </div>
         </li>
         <li class="incoming-message message">
-          <img src="images/avatar.jpg" class="g-avatar" />
+          <img src="images/ryan.PNG" class="g-avatar" />
           <div class="message__content">
             <span class="message__bubble">
               Congrats I love you!
             </span>
-            <span class="message__author">Best Friend</span>
+            <span class="message__author">Ryan</span>
           </div>
           <span class="message__timestamp"></span>
         </li>
