--- a/find.html
+++ b/find.html
@@ -11,32 +11,35 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>Find | KaKao Clone</title>
   </head>
-  <body>
-    <div class="status-bar">
-      <div class="status-bar__column">
-        <span class="status-bar__clock">13:27</span>
+  <body class="friends-body">
+    <div class="top-header">
+      <div class="status-bar">
+        <div class="status-bar__column">
+          <span class="status-bar__clock">13:27</span>
+        </div>
+        <div class="status-bar__column">
+          <i class="fas fa-clock"></i>
+          <i class="fas fa-volume-mute"></i>
+          <i class="fas fa-wifi"></i>
+          <span class="status-bar__battery-level">100%</span>
+          <i class="fas fa-battery-full"></i>
+        </div>
       </div>
-      <div class="status-bar__column">
-        <i class="fas fa-clock"></i>
-        <i class="fas fa-volume-mute"></i>
-        <i class="fas fa-wifi"></i>
-        <span class="status-bar__battery-level">100%</span>
-        <i class="fas fa-battery-full"></i>
-      </div>
+      <header class="header">
+        <div class="header__header-column">
+          <h1 class="header__title">Find</h1>
+        </div>
+        <div class="header__header-column">
+          <span class="header__icon">
+            <i class="fas fa-search"></i>
+          </span>
+          <span class="header__icon">
+            <i class="fas fa-cog"></i>
+          </span>
+        </div>
+      </header>
     </div>
-    <header class="header">
-      <div class="header__header-column">
-        <h1 class="header__title">Find</h1>
-      </div>
-      <div class="header__header-column">
-        <span class="header__icon">
-          <i class="fas fa-search"></i>
-        </span>
-        <span class="header__icon">
-          <i class="fas fa-cog"></i>
-        </span>
-      </div>
-    </header>
+
     <main class="find">
       <header class="find__header">
         <ul class="find__header-list">
@@ -76,12 +79,87 @@
       </header>
       <ul class="find__recommended">
         <h5 class="find__title">Recommended Friends</h5>
-        <li class="find__friend friend">
+        <li class="find__friend friend friend-list">
           <div class="friend__column">
-            <img src="images/avatar.jpg" alt="" class="friend__avatar" />
+            <img src="images/pendajr.PNG" alt="" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                JHLEE
+                PENDA Jr.
+              </span>
+            </div>
+          </div>
+          <div class="friend__column">
+            <div class="friend__add-btn">
+              <i class="fas fa-user-plus"></i>
+            </div>
+          </div>
+        </li>
+        <li class="find__friend friend friend-list">
+          <div class="friend__column">
+            <img src="images/scappy.PNG" alt="" class="friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">
+                SCAPPY
+              </span>
+            </div>
+          </div>
+          <div class="friend__column">
+            <div class="friend__add-btn">
+              <i class="fas fa-user-plus"></i>
+            </div>
+          </div>
+        </li>
+        <li class="find__friend friend friend-list">
+          <div class="friend__column">
+            <img src="images/keroandberony.PNG" alt="" class="friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">
+                KERO & BERONY
+              </span>
+            </div>
+          </div>
+          <div class="friend__column">
+            <div class="friend__add-btn">
+              <i class="fas fa-user-plus"></i>
+            </div>
+          </div>
+        </li>
+        <li class="find__friend friend friend-list">
+          <div class="friend__column">
+            <img src="images/jordy.PNG" alt="" class="friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">
+                JORDY
+              </span>
+            </div>
+          </div>
+          <div class="friend__column">
+            <div class="friend__add-btn">
+              <i class="fas fa-user-plus"></i>
+            </div>
+          </div>
+        </li>
+        <li class="find__friend friend friend-list">
+          <div class="friend__column">
+            <img src="images/angmond.PNG" alt="" class="friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">
+                ANGMOND
+              </span>
+            </div>
+          </div>
+          <div class="friend__column">
+            <div class="friend__add-btn">
+              <i class="fas fa-user-plus"></i>
+            </div>
+          </div>
+        </li>
+        <li class="find__friend friend friend-list">
+          <div class="friend__column">
+            <img src="images/cobandbbanya.PNG" alt="" class="friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">
+                COB & BBANYA
               </span>
             </div>
           </div>
