--- a/friends.html
+++ b/friends.html
@@ -64,7 +64,7 @@
         <h5 class="friends__title">Plus friend</h5>
         <div class="friends__friend friend">
           <div class="friend__column">
-            <img src="images/plusfriend.png" alt="" class="friend__avatar" />
+            <img src="images/plusfriend.PNG" alt="" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Plus Friend
@@ -128,7 +128,7 @@
         </li>
         <li class="friends__friend friend friend-list">
           <div class="friend__column">
-            <img src="images/frodo.png" alt="" class="friend__avatar" />
+            <img src="images/frodo.PNG" alt="" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Frodo
@@ -147,7 +147,7 @@
         </li>
         <li class="friends__friend friend friend-list">
           <div class="friend__column">
-            <img src="images/neo.png" alt="" class="friend__avatar" />
+            <img src="images/neo.PNG" alt="" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Neo
@@ -166,7 +166,7 @@
         </li>
         <li class="friends__friend friend friend-list">
           <div class="friend__column">
-            <img src="images/tube.png" alt="" class="friend__avatar" />
+            <img src="images/tube.PNG" alt="" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Tube
