--- a/friends.html
+++ b/friends.html
@@ -44,11 +44,12 @@
       <header class="friends__header">
         <div class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img
-              src="images/profile.jpg"
-              alt=""
-              class="g-avatar friend__avatar"
-            />
+            <a href="profile.html">
+              <img
+                src="images/profile.jpg"
+                alt=""
+                class="g-avatar friend__avatar"
+              />
             <div class="friend__content">
               <span class="friend__name">
                 JHLEE
@@ -56,6 +57,7 @@
               <span class="friend__status">
                 hello!
               </span>
+            </a>
             </div>
           </div>
         </div>
