--- a/settings.html
+++ b/settings.html
@@ -65,4 +65,5 @@
       <span class="bigScreen__text">Please make your screen small!! 🙄</span>
     </div>
   </body>
+  <script src="js/history.js"></script>
 </html>
